--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css"
+    />
     <title>BookBrief</title>
-</head>
-<body>
-    Before
-    <br>
-    <%- body %> 
-    <br>
-    After
-</body>
+  </head>
+  <body>
+      <%- include('../partials/header.ejs') %>
+    <div class="container">
+      <br />
+      <%- body %>
+      <br />
+    </div>
+  </body>
 </html>
