--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,18 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="/">BookBriefs</a>
       <div class="mr-auto ml-5">
         <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a class="nav-link" href="/books">Books</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="/books/add">Add Books</a>
-            </li>
-          </ul>
+          <li class="nav-item"><a class="nav-link" href="/books">Books</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books/add">Add Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books/genres">Genres</a>
+          </li>
+        </ul>
       </div>
-      
     </div>
   </nav>
 </header>
