--- a/views/partials/_form_for_book.ejs
+++ b/views/partials/_form_for_book.ejs
@@ -95,10 +95,10 @@
         <label>Genre</label>
         <select name="genre" class="form-control" >
          
-          <option>Fantasy and science fiction</option>
+          <option>Fantasy</option>
           <option>Romance</option>
           <option>Mystery</option>
-          <option>Thrillers and horror</option>
+          <option>Thrillers</option>
           <option>Young adult</option>
           <option>Children’s fiction</option>
           <option>Inspirational, self-help, and religious books</option>
