--- a/views/books/singleBook.ejs
+++ b/views/books/singleBook.ejs
@@ -1,41 +1,52 @@
 <div class="container">
-    <div class="py-5">
-        <h3 class="text-center text-warning"><%= book.title %> </h3>
-        <p class="text-center"><%= book.genre %> </p>
+  <div class="py-5">
+    <h3 class="text-center text-warning"><%= book.title %></h3>
+    <p class="text-center"><%= book.genre %></p>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= book.coverUrl %> " alt="" />
+      <% if(book.getBook != ''){ %>
+      <a
+        href="<%= book.getBook %> "
+        class="btn btn-outline-success my-4"
+        style="width: 182px"
+        target="_blank"
+        ><i class="fas fa-shopping-cart"></i> GET THE BOOK
+      </a>
+      <% } %>
     </div>
-    <div class="row">
-      <div class="col-md-3">
-        
-        <img src="<%= book.coverUrl %> " alt="">
-        <% if(book.getBook != ''){ %> 
-          <a href="<%= book.getBook %> " class="btn btn-success my-4" style="width: 182px;" target="_blank"><i class="fas fa-shopping-cart"></i>  GET THE BOOK </a>
-        <% } %> 
+    <div class="col-md-9">
+      
+      <div class="d-flex justify-content-around py-5">
+        <h6><strong>Author : </strong><%= book.author %></h6>
+        <h6><strong>Language : </strong><%= book.language %></h6>
+        <h6><strong>Year : </strong><%= book.year %></h6>
+        <h6>
+          <strong><%= book.isbn == ''?'':"ISBN no:" %> </strong><%= book.isbn %>
+        </h6>
       </div>
-      <div class="col-md-9">
-        <p style="color: grey; padding-top:5pc;"><%= book.description %> </p>
-        <div class="d-flex justify-content-around py-5">
-          <h6><strong>Author : </strong><%= book.author %> </h6>
-          <h6><strong>Language : </strong><%= book.language %> </h6>
-          <h6><strong>Year : </strong><%= book.year %> </h6>
-          <h6><strong><%= book.isbn == ''?'':"ISBN no:" %>  </strong><%= book.isbn  %> </h6>
-        </div>
-        <div class="d-flex justify-content-around">
+      <p style="color: grey;"><%= book.description %></p>
+      <div class="d-flex justify-content-around" style="margin-top: 100px;">
+      <% if(user){ %> 
+        <% if(user._id == book.userId){ %> 
           <div>
-          
-              <a class="btn btn-warning"  href="/books/<%= book.id %>/edit "><i class="fas fa-pencil-alt"></i></a>
-            
+            <a class="btn btn-outline-warning" href="/books/<%= book.id %>/edit "
+              ><i class="fas fa-pencil-alt"></i
+            ></a>
           </div>
           <form method="POST" action="/books/<%= book.id %>?_method=DELETE ">
-           
-              <button type="submit" class="btn btn-danger" ><i class="fas fa-trash-alt"></i></button>
-
-            
-
+            <button type="submit" class="btn btn-outline-danger">
+              <i class="fas fa-trash-alt"></i>
+            </button>
           </form>
-        </div>
+        <% } %> 
+      <% } %> 
       </div>
     </div>
-<br>
-<br>
-<hr>
-<h6>Comments</h6>
+  </div>
+  <br />
+  <br />
+  <hr />
+  <h6>Comments</h6>
+</div>
