--- a/views/books/addBook.ejs
+++ b/views/books/addBook.ejs
@@ -1,7 +1,12 @@
-<h4>Add new Book</h4>
-<form class="" action="/books" method="POST">
-<% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %> 
-
-<%-include('../partials/_form_for_book.ejs') %>
-<button class="btn btn-primary" type="submit">Create</button>
-</form>
+<%- include('../partials/header.ejs') %>
+<br />
+<div class="container">
+  <h4>Add new Book</h4>
+  <form class="" action="/books" method="POST">
+    <% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %>
+    <%-include('../partials/_form_for_book.ejs') %>
+    <div class="container">
+      <button class="btn btn-primary" type="submit">Create</button>
+    </div>
+  </form>
+</div>
