--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -15,62 +15,71 @@
     removeAllChildNodes(list);
 
     books.forEach((book) => {
+      const img = document.createElement("img");
+      img.src = book.coverUrl;
+      img.className = "auto-complete-img";
+      const p = document.createElement("p");
+      p.textContent = book.title;
+      p.className = "auto-complete-text col";
       const a = document.createElement("a");
-      const li = document.createElement("li").appendChild(a);
+      a.href = `/books/${book._id}`;
+      a.className = "row";
+      a.appendChild(img);
+      a.appendChild(p);
+      const li = document.createElement("li");
       li.className = "list-group-item";
-      li.textContent = book.title;
-      li.href = `/books/${book._id}`;
+      li.appendChild(a);
       list.appendChild(li);
     });
   }
 </script>
+<%- include('../partials/header.ejs') %>
+<br />
+<div class="container">
+  <form
+    action="/books"
+    method="GET"
+    class="d-flex"
+    style="justify-content: center; position: relative"
+  >
+    <input
+      id="search "
+      oninput="getBooks(event)"
+      name="search"
+      class="form-control me-sm-2"
+      type="text"
+      placeholder="Search"
+      style="width: 36rem"
+    />
+    <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+  </form>
+  <div class="d-flex" style="justify-content: center; position: relative">
+    <ul
+      id="auto-complete"
+      class="list-group"
+      style="width: 40rem; position: absolute; z-index: 2"
+    ></ul>
+  </div>
 
-<form
-  action="/books"
-  method="GET"
-  class="d-flex"
-  style="justify-content: center; position: relative"
->
-  <input
-    id="search"
-    oninput="getBooks(event)"
-    name="title"
-    class="form-control me-sm-2"
-    type="text"
-    placeholder="Search"
-    style="width: 40rem"
-  />
-  <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-  <ul
-    id="auto-complete"
-    class="list-group"
-    style="
-      position: absolute;
-      top: 36.5px;
-      left: 200px;
-      width: 638px;
-      z-index: 2;
-      width: 40rem;
-    "
-  ></ul>
-</form>
-
-<div class="row py-5">
-  <% books.forEach(book => { %>
-  <div class="col-md-2 my-2">
-    <div class="card">
-      <img
-        style="height: 230px"
-        src="<%= book.coverUrl %>"
-        class="card-img-top"
-      />
-      <div class="card-body">
-        <p class="card-title" style="height: 8vh"><%= book.title %></p>
-        <a href="/books/<%= book.id %> " class="btn btn-outline-success d-block"
-          >View</a
-        >
+  <div class="row py-5">
+    <% books.forEach(book => { %>
+    <div class="col-md-2 my-2">
+      <div class="card">
+        <img
+          style="height: 230px"
+          src="<%= book.coverUrl %>"
+          class="card-img-top"
+        />
+        <div class="card-body">
+          <p class="card-title" style="height: 8vh"><%= book.title %></p>
+          <a
+            href="/books/<%= book.id %> "
+            class="btn btn-outline-success d-block"
+            >View</a
+          >
+        </div>
       </div>
     </div>
+    <% }) %>
   </div>
-  <% }) %>
 </div>
