--- a/views/partials/_form_for_book.ejs
+++ b/views/partials/_form_for_book.ejs
@@ -1,4 +1,7 @@
+<div class="container">
 
+
+</div>
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
@@ -131,5 +134,5 @@
       
     ><%= book.description %></textarea>
   </div>
+</div>
   
-
