--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,24 +1,51 @@
-<div class="container">
-  <form class="form-group" action="/users/login" method="POST">
-     <div class="row" style="display:flex; justify-content: center;margin-top: 8rem;">
-          <div class="col-md-4 col-md-offset-4 " >
-              <h1 class="text-center">Login</h1>
-              <% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %>
-              <!-- <label for="">Email</label> -->
-              <div class="form-group">
-                  <input type="email" name="email" class="form-control" placeholder="Enter Email" required autofocus>
-              </div>
-              <div class="form-group">
-                  <input type="password" name="password" class="form-control" placeholder="Enter Password" required autofocus>
-              </div>
-              <div class="form-group">
-                   <button type="submit" class="btn btn-primary btn-block">Login</button>
-               <a href="/users/register" class="nav-link text-center"
-                 >Don't have a account,Register</a
-               >
-             </div>
+<section id="showcase">
+  <div class="logo">
+    <a href="/"
+      ><h2 href="/" class="logo">
+        <img
+          class="logo-img"
+          src="/public/images/logo1.png"
+          alt=""
+          srcset=""
+        /></h2
+    ></a>
+    <h5 class="logo logo-text">Briefs</h5>
+  </div>
+  <!-- <h1>Book Breaf</h1> -->
+  <div class="showcase-content">
+    <form class="form-group" action="/users/login" method="POST">
+      <div class="form-container">
+        <div class="form-content">
+          <h2 class="bg-Success mb-4">Sign In</h2>
+          <% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %>
+          <div class="form-group">
+            <div class="form-floating mb-4">
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="floatingInput"
+                placeholder="Email"
+              />
+            </div>
+            <div class="form-floating mb-4">
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+              />
+            </div>
+            <button type="submit" class="btn btn-success btn-block">
+              Sign In
+            </button>
+            <a href="/users/register" class="nav-link text-center"
+              >Don't have a account,Register</a
+            >
           </div>
+        </div>
       </div>
-     </form>
-</div>
-
+    </form>
+  </div>
+</section>
