--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,56 +1,158 @@
-body{
-    font-family: 'Lora', serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
 }
 .auto-complete-img {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .auto-complete-text {
-    margin: 0 !important;
+  margin: 0 !important;
+}
+
+.comment-input {
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+#comment {
+  width: 60rem;
+  background-color: #222222;
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+}
+
+.comment-card {
+  
+  background: rgba(17, 16, 16, 0.6);
+  padding: 20px;
+  margin: 10px;
+}
+
+.comment-card h6 {
+  color: #484b4f;
+}
+
+.like-heart {
+  float: right;
+}
+
+.fa-heart {
+  color: #67b943;
+}
+
+.fa-comment {
+  color: #67b943;
+}
+
+.fa-star {
+  color: yellow;
+}
+
+.c-delete {
+  color: red;
+}
+
+/*BASE STYLES*/
+
+#showcase {
+  background: url(/public/images/bg.jpg) no-repeat center center/ cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  
+}
+
+#showcase::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
+}
+.showcase-content {
+  z-index: 5;
 }
 
 
-.comment-input{
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 30px;
-    
+.form-container {
+  padding: 50px;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 20;
 }
 
-#comment{
-    width: 60rem;
-    background-color: #222222;
-    border: none;
-    border-bottom: 1px solid black;
-    outline: none;
-
+.form-content {
+  z-index: 10;
 }
 
-.comment-card{
-    /* border-radius: 10px; */
-   /* position: relative; */
-   background: rgba(17, 16, 16, 0.6);
-    /* box-shadow: 0 5px 15px rgba(0,0,0,.5); */
-   padding: 20px;
-   margin: 10px;
-
+h2 {
+  color: #fff;
+  margin: 10px;
 }
 
-.comment-card h6{
-    color: #484b4f;
+/* landing page */
+.logo {
+  color: #00bc8c;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
 }
 
-.like-heart{
-    float: right;
+.logo-img {
+  width: 100px;
+  margin: 0;
 }
 
-.fa-heart{
-    color: #67b943;
+.logo-img {
+  margin-top: 20px;
+  margin-left: 30px;
 }
 
-.fa-comment{
-    color: #67b943;
-    
+.logo-text {
+  margin-top: 82px;
+  margin-left: 64px;
 }
 
+.name {
+  font-size: 80px;
+  font-weight: bolder;
+}
+.welcome {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 60px;
+}
+
+
+
+.sign-btn {
+  color: #fff;
+  position: absolute;
+  top: 37px;
+  right: 60px;
+  z-index: 20;
+}
+.getstarted-btn {
+  padding: 10px 40px;
+  font-size: 25px;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 500;
+}
