--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -7,9 +7,11 @@
 
   async function getBooks(e) {
     const list = document.getElementById("auto-complete");
+    const by = document.getElementById("inputState").value;
+    console.log(by);
     const search = e.target.value;
     const books = await fetch(
-      `http://localhost:3000/api/auto-complete?search=${search}`
+      `http://localhost:3000/api/auto-complete?search=${search}&by=${by}`
     ).then((res) => res.json());
 
     removeAllChildNodes(list);
@@ -42,16 +44,31 @@
     class="d-flex"
     style="justify-content: center; position: relative"
   >
-    <input
-      id="search "
-      oninput="getBooks(event)"
-      name="search"
-      class="form-control me-sm-2"
-      type="text"
-      placeholder="Search"
-      style="width: 36rem"
-    />
-    <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+    <div class="form-group col-md-2">
+      <select name="by" id="inputState" class="form-control">
+        <option selected>All</option>
+        <option>Title</option>
+        <option>Author</option>
+        <option>Language</option>
+        <option>Genre</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <input
+        id="search "
+        oninput="getBooks(event)"
+        name="search"
+        class="form-control me-sm-2"
+        type="text"
+        placeholder="Search"
+        style="width: 30rem"
+      />
+    </div>
+    <div class="col-auto">
+      <button class="btn btn-success my-2 my-sm-0" type="submit">
+        <i class="fas fa-search"></i>
+      </button>
+    </div>
   </form>
   <div class="d-flex" style="justify-content: center; position: relative">
     <ul
@@ -61,17 +78,26 @@
     ></ul>
   </div>
 
-  <div class="row py-5">
+  <div class="row py-3">
     <% books.forEach(book => { %>
     <div class="col-md-2 my-2">
-      <div class="card">
+      <div class="card" style="border-radius: 0">
         <img
-          style="height: 230px"
+          style="height: 230px; border-radius: 0"
           src="<%= book.coverUrl %>"
           class="card-img-top"
         />
         <div class="card-body">
           <p class="card-title" style="height: 8vh"><%= book.title %></p>
+
+          <% let sum = 0 %> <% book.rating.forEach(rate=>{ %> <% let val =
+          rate.rate %> <% sum += val %> <% }) %> <% let rating =
+          Math.round(sum/book.rating.length) %> %> <% if(book.rating.length !=
+          0){ %>
+          <p><i class="fas fa-star"></i> <%= rating %></p>
+          <% }else{ %>
+          <p><i class="fas fa-star"></i> Not rated</p>
+          <% } %>
           <a
             href="/books/<%= book.id %> "
             class="btn btn-outline-success d-block"
