--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,29 +1,60 @@
-<div class="container">
-
-  <form action="/users/register" method="POST">
-    <div class="row" style="display:flex; justify-content: center;margin-top: 8rem;">
-      <div class="col-md-4 col-md-offset-4 " >
-          <h1 class="text-center">Register</h1>
-          <% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %>
-          <!-- <label for="">Name</label> -->
-          <div class="form-group">
-              <input type="text" name="name" class="form-control" placeholder="Enter Name" required autofocus>
-          </div>
-          <div class="form-group">
-            <!-- <label for="">Email</label> -->
-              <input type="email" name="email" class="form-control" placeholder="Enter Email" required autofocus>
-          </div>
-          <div class="form-group">
-            <!-- <label for="">Password</label> -->
-              <input type="password" name="password" class="form-control" placeholder="Enter Password" required autofocus>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Register</button>
-           <a href="/users/login" class="nav-link text-center">Already registered,Login</a>
-
-         </div>
-      </div>
+<section id="showcase">
+  <div class="logo">
+    <a href="/"
+      ><h2 href="/" class="logo">
+        <img
+          class="logo-img"
+          src="/public/images/logo1.png"
+          alt=""
+          srcset=""
+        /></h2
+    ></a>
+    <h5 class="logo logo-text">Briefs</h5>
   </div>
-</div>
-
-
+  <!-- <h1>Book Breaf</h1> -->
+  <div class="showcase-content">
+    <form action="/users/register" method="POST">
+      <div class="form-container">
+        <div class="form-content">
+          <h2 class="bg-Success mb-4">Register</h2>
+          <% if(locals.errorMessage != null){ %> <%= errorMessage %> <% } %>
+          <div class="form-group">
+            <div class="form-floating mb-4">
+              <input
+                type="text"
+                name="name"
+                class="form-control"
+                id="floatingInput"
+                placeholder="Name"
+              />
+            </div>
+            <div class="form-floating mb-4">
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Email"
+              />
+            </div>
+            <div class="form-floating mb-4">
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+              />
+            </div>
+            <button type="submit" class="btn btn-success btn-block">
+              Sign Up
+            </button>
+            <a href="/users/login" class="nav-link text-center"
+              >Already registered,Login</a
+            >
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
