--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
           >
             <i class="fas fa-user-circle"></i>
           </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item"><%= user.name %> </a>
 
             <a class="dropdown-item" href="/users/logout">Logout</a>
