--- a/views/books/singleBook.ejs
+++ b/views/books/singleBook.ejs
@@ -7,7 +7,7 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <img src="<%= book.coverUrl %> " alt="" />
+      <img class="single-cover" src="<%= book.coverUrl %> " />
       <% if(book.getBook != ''){ %>
       <a
         href="<%= book.getBook %> "
